# ceres-geometric-constraints

./: .gitignore  README.md  arch2.py  archive.py  experiments.py  frustum_visualizer.py  general_utils.py  geometry_utils.py  global_error_assessment.py  image_utils.py  main.py  manifold_utils.py  output_assessment.py  plot_results.py  residuals.txt  ring_utils.py  simple_verify.py  utils.py
bundle_adjustment/: BALProblem.h  CMakeLists.txt  QuatCost.h  QuatProblem.h  Ring.h  SimpleCost.h  angle_manifold.h  assess_reprojection.cc  bundle_adjust.cc  normalize_angle.h  points.py  ring_test.cc
geometry_encodings/: ring_params.txt  ring_params_noised.txt
manifold_encodings/: ring_params.txt  ring_params_noised.txt
problem_encodings/: ba_problem_input.txt
source_clouds/: bmw.tar
